<?xml version="1.0"?>
<package>
    
    <name>tamsviz</name>
    <version>0.0.0</version>
    <description>Visualization and annotation tool for ROS</description>

    <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
    <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>moveit_core</build_depend>
    <run_depend>moveit_core</run_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>

    <build_depend>moveit_ros_planning</build_depend>
    <run_depend>moveit_ros_planning</run_depend>

    <build_depend>moveit_ros_robot_interaction</build_depend>
    <run_depend>moveit_ros_robot_interaction</run_depend>

    <build_depend>moveit_ros_planning_interface</build_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>

    <build_depend>geometry_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>

    <build_depend>opencv2</build_depend>
    <run_depend>opencv2</run_depend>
    
    <build_depend>resource_retriever</build_depend>
    <run_depend>resource_retriever</run_depend>
    
    <build_depend>assimp</build_depend>
    <run_depend>assimp</run_depend>
    
    <build_depend>cv_bridge</build_depend>
    <run_depend>cv_bridge</run_depend>

    <build_depend>rosbag</build_depend>
    <run_depend>rosbag</run_depend>
    
    <build_depend>interactive_markers</build_depend>
    <run_depend>interactive_markers</run_depend>
    
    <build_depend>eigen_conversions</build_depend>
    <run_depend>eigen_conversions</run_depend>

    <build_depend>laser_geometry</build_depend>
    <run_depend>laser_geometry</run_depend>    

    <build_depend>qtbase5-dev</build_depend>
    <run_depend>libqt5-core</run_depend>
    <run_depend>libqt5-gui</run_depend>
    <run_depend>libqt5-widgets</run_depend>
    <run_depend>libqt5-opengl</run_depend>

    <export>
    </export>

</package>
